--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="banner">
         <div class="banner-filter"></div>
-        <img src="../images/banner.png" alt="banner image">
+        <img src="./images/banner.png" alt="banner image">
     </div>
 
     <div class="content">
