--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="banner">
         <div class="banner-filter"></div>
-        <img src="./images/banner.png" alt="banner image">
+        <img src="images/banner.png" alt="banner image">
     </div>
 
     <div class="content">
@@ -81,5 +81,5 @@
     </div>
 
 </body>
-<script src="../JS/script.js"></script>
+<script src="JS/script.js"></script>
 </html>
